# musical-cli

./: .gitignore  CLI_SPEC.md  CMakeLists.txt  README.md  arch.txt  note.txt  out.txt  temp.txt
cli/: CLI_SPEC.md  CMakeLists.txt
cli/commands/: chord_cmd.cpp  scale_cmd.cpp
cli/include/: Ansi.h  ArgumentParser.h  Command.h  CommandOption.h  Option.h  command_option.h  idea.txt  option_parameter_t.h  option_t.h  stream_option.h  terminal.h
cli/include/cadence/: idea.txt
cli/include/chord/: ChordCommand.h  Usage.h  diagram_layout.h  diagram_option.h  difficulty_option.h  dumpdb_option.h  help_option.h  play_option.h  random_option.h  tuning_option.h
cli/include/command/chord/: ChordCommand.h  chord_parser.h  diagram.h  diagram_layout.h  diagram_option.h  diagram_renderer.h  difficulty_option.h  dumpdb.h  dumpdb_option.h  dumpdb_renderer.h  help_option.h  play_option.h  random_option.h  tuning_option.h  version_option.h
cli/src/: ArgumentParser.cpp  CommandOption.cpp  Option.cpp  command_option.cpp  main.cpp  option_parameter_t.cpp
cli/src/chord/: ChordCommand.cpp  diagram_layout.cpp  diagram_option.cpp  difficulty_option.cpp  dumpdb_option.cpp  help_option.cpp  play_option.cpp  random_option.cpp  tuning_option.cpp  usage.cpp
cli/src/command/chord/: ChordCommand.cpp  chord_parser.cpp  diagram.cpp  diagram_layout.cpp  diagram_option.cpp  diagram_renderer.cpp  difficulty_option.cpp  dumpdb.cpp  dumpdb_option.cpp  dumpdb_renderer.cpp  help_option.cpp  play_option.cpp  random_option.cpp  tuning_option.cpp  usage.cpp  version_option.cpp
cli/src/command/scale/: scale_cmd.cpp
include/musical/Analysis/: ChordAnalysis.h  ChordFunctionAnalyser.h  Harmonizer.h  Harmony.h
include/musical/Core/: Arpeggio.h  Cadence.h  Figure.h  GuitarTuning.h  Intervals.h  Mode.h  Musical.h  MusicalCoreConstants.h  MusicalCoreEnums.h  Pitch.h  Rest.h  Series.h  Tone.h  intervals_defs.h  pitch_t.h
include/musical/Core/chord/: Arpeggio.h  Chord.h  ChordFactory.h  ChordType.h  ChordTypeCatalog.h  Factory.h  common.h
include/musical/Core/note/: Factory.h  Note.h  NoteFactory.h  NoteService.h  Rest.h
include/musical/Core/scale/: ScaleKeyed.h  ScaleKeyedFactory.h  ScalePattern.h  ScalePatternFactory.h  (+1 more)
include/musical/ScoreElements/: KeySignature.h  Measure.h  TimeSignature.h
include/musical/analysis/: ChordAnalysis.h  ChordFunctionAnalyser.h  Harmonizer.h  Harmony.h  chord_name.h
include/musical/chord_db/: Diagram.h  triads.h
include/musical/common/: musical_constants.h
include/musical/core/: Intervals.h  Mode.h  Pitch.h  Series.h  Tone.h
include/musical/guitar_chord_database/: Diagram.h  MovableShapeDiagram.h  OpenChordDiagram.h  SixStringsDiagram.h  Tuning.h  data_movable.h  data_open.h  database_movable_a.h  database_movable_c.h  database_movable_d.h  database_movable_e.h  database_movable_g.h  database_open_a.h  database_open_c.h  database_open_d.h  database_open_e.h  database_open_g.h  db_movable_queries.h  db_open_queries.h  movable_queries.h
src/Analysis/: ChordAnalysis.cpp  ChordFunctionAnalyser.cpp  Harmonizer.cpp  Harmony.cpp  chord_name.cpp
src/Core/: Arpeggio.cpp  Cadence.cpp  Figure.cpp  GuitarTuning.cpp  Mode.cpp  Rest.cpp  pitch_t.cpp
src/Core/chord/: Arpeggio.cpp  Chord.cpp  ChordFactory.cpp  ChordType.cpp  ChordTypeCatalog.cpp  Factory.cpp  common.cpp
src/Core/note/: Factory.cpp  Note.cpp  NoteFactory.cpp  NoteService.cpp  Rest.cpp
src/Core/scale/: ScaleKeyed.cpp  ScaleKeyedFactory.cpp  ScalePattern.cpp  ScalePatternFactory.cpp
src/Core/scale_keyed/: ScaleKeyed.cpp  ScaleKeyedFactory.cpp  ScalePattern.cpp  ScalePatternFactory.cpp
src/IO/chord/: chord_formatter.cpp  chord_grammar.cpp  chord_lexer.cpp  chord_parser.cpp
src/IO/note/: note_lexer.cpp
src/IO/scale/: ScalePatternRepository.cpp  scalepattern_formatter.cpp
src/ScoreElements/: KeySignature.cpp  Measure.cpp  TimeSignature.cpp
src/analysis/: ChordAnalysis.cpp  ChordFunctionAnalyser.cpp  Harmonizer.cpp  Harmony.cpp  chord_name.cpp
src/analysis/chord/: io.cpp  naming.cpp
src/audio/engine/: AlsaEngine.cpp
src/audio/karplus_strong/: chord_player.cpp
src/audio/players/: ChordPlayer.cpp
src/audio/synthesis/: KarplusStrong.cpp  basicsignalsgenerator.cpp
src/audio/wave/: chord_player.cpp
src/chord_db/: Diagram.cpp
src/chord_db/movable/: aug.cpp  database.cpp  dim.cpp  maj.cpp  min.cpp  queries.cpp  sus2.cpp  sus4.cpp  todo.txt
src/chord_db/open/: aug.cpp  database.cpp  dim.cpp  maj.cpp  min.cpp  queries.cpp  sus2.cpp  sus4.cpp
src/core/: Cadence.cpp  Figure.cpp  Mode.cpp
src/core/chord/: Arpeggio.cpp  Chord.cpp  ChordFactory.cpp  ChordType.cpp  ChordTypeCatalog.cpp
src/core/note/: Note.cpp  NoteFactory.cpp  Rest.cpp
src/core/scale/: ScaleKeyed.cpp  ScaleKeyedFactory.cpp  ScalePattern.cpp  ScalePatternFactory.cpp
src/guitar_chord_database/: Diagram.cpp  MovableShapeDiagram.cpp  OpenChordDiagram.cpp  Tuning.cpp  data_movable.cpp  data_open.cpp  database_maj75b.cpp  database_movable_a.cpp  database_movable_c.cpp  database_movable_d.cpp  database_movable_e.cpp  database_movable_g.cpp  database_open_a.cpp  database_open_c.cpp  database_open_d.cpp  database_open_e.cpp  database_open_g.cpp  db_movable_queries.cpp  db_open_queries.cpp  movable_queries.cpp  open_queries.cpp
src/guitar_chord_database/movable/: aug.cpp  database.cpp  dim.cpp  maj.cpp  min.cpp  queries.cpp  sus2.cpp  sus4.cpp
src/guitar_chord_database/open/: aug.cpp  database.cpp  dim.cpp  maj.cpp  min.cpp  queries.cpp  sus2.cpp  sus4.cpp  todo.txt
src/instruments/guitar/: Tuning.cpp  chord_guitar_diagram.cpp  chord_guitar_diagram_ascii_6.cpp  chord_guitar_diagram_db_6.cpp
src/io/chord/: Lexer.cpp  Parser.cpp  chord_formatter.cpp  chord_grammar.cpp  chord_lexer.cpp  chord_parser.cpp  formatter.cpp  lexer.cpp  parser.cpp
src/io/guitar/: stream_diagram.cpp  stream_diagram2.cpp
src/io/note/: mei_adapter.cpp  note_formatter.cpp  note_lexer.cpp  note_parser.cpp  stream.cpp
src/io/scale/: ScalePatternRepository.cpp  scalepattern_formatter.cpp
tests/: CMakeLists.txt  test_chord_lexer.cpp  test_note.cpp
(+281 files in other folders)
